Correções e ajustes finais do projeto